<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/mainLayout"
    android:layout_margin="@dimen/main_margin">

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:id="@+id/startPoint"
        app:layout_constraintTop_toTopOf="@+id/mainLayout"
        app:layout_constraintLeft_toLeftOf="@+id/mainLayout"
        app:layout_constraintRight_toRightOf="@id/mainLayout">
        <AutoCompleteTextView
            android:id="@+id/startPointEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_point_start"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:id="@+id/destinationPoint"
        app:layout_constraintTop_toBottomOf="@+id/startPoint"
        app:layout_constraintLeft_toLeftOf="@+id/mainLayout"
        app:layout_constraintRight_toRightOf="@id/mainLayout">
        <AutoCompleteTextView
            android:id="@+id/destinationPointEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_point_destination"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:id="@+id/startDate"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@+id/destinationPoint"
        app:layout_constraintLeft_toLeftOf="@id/mainLayout"
        app:layout_constraintRight_toLeftOf="@id/endDate">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/startDateEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:hint="@string/hint_date_start"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:id="@+id/endDate"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@+id/destinationPoint"
        app:layout_constraintRight_toRightOf="@id/mainLayout"
        app:layout_constraintLeft_toRightOf="@id/startDate">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/endDateEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_date_end"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:id="@+id/sum"
        app:layout_constraintTop_toBottomOf="@id/startDate"
        app:layout_constraintLeft_toLeftOf="@id/startDate"
        app:layout_constraintRight_toRightOf="@id/startDate">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/sumEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_sum"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:text="@string/caption_button_go"
        android:id="@+id/goButton"
        app:layout_constraintTop_toBottomOf="@+id/endDate"
        app:layout_constraintRight_toRightOf="@id/endDate"
        app:layout_constraintLeft_toRightOf="@id/sum"
        app:layout_constraintBottom_toBottomOf="@+id/sum"
        android:hint="@string/caption_button_go"/>

</android.support.constraint.ConstraintLayout>